--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -14,5 +14,8 @@
     
     <!-- Main Script -->
     <script src="js/main.js"></script>
+
+    <!-- error Script -->
+    <script src="js/error.js"></script>
   </body>
 </html>
